# Paper_with_code

./: LeNet_5_Pytorch.ipynb  Models.py  ONNX-converter.py  lenet.onnx  pyproject.toml
